1 file modified, 2 added, 1 deleted

--- a/page2.html
+++ b/page2.html
@@ -6,8 +6,8 @@
     <div class="parent">
       <nav>
         <ul>
-          <li><a href="index.html">Class 1</a></li>
-            <li><a href="page2.html">Class 2</a></li>
+          <li><a href="index.html">class 1</a></li>
+            <li><a href="page2.html">class 2</a></li>
       </nav>
       <div class="child">
         <p>this has been selected by CSS using the p tag name</p>
